# YUVPlayer

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  YUVPlayer.rc  d3d9_player.cpp  d3d9_player.h  main.cpp  player_common.h  resource.h  sdl_player.cpp  sdl_player.h  yuv_player.cpp  yuv_player.h
resources/: player.xml
scripts/: copy_file.bat
